[workspace]
members = ["gui"]
resolver = "2"

[workspace.package]
name = "plox"
version = "0.2.2"
authors = ["Moritz Baron"]
description = "PLOX - Plugin Load Order eXpert. PLOX is a tool for analyzing and sorting your plugin load order. Supports Morrowind, OpenMW and Cyberpunk"
documentation = ""

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.5"

[package]
name = "plox"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
openmw-cfg = "0.5"                                              # move to feature flag
clap = { version = "4.1", features = ["derive"] }
toposort-scc = "0.5"
rust-ini = "0.20"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
seahash = "4.1"
filetime = "0.2"
semver = "1.0"
lenient_semver = "0.4"

byteorder = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.3"
rand = "0.8"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
