[workspace]
members = ["gui"]
resolver = "2"

[workspace.package]
name = "plox"
version = "0.4.1"
authors = ["Moritz Baron"]
description = "PLOX - Plugin Load Order eXpert. PLOX is a tool for analyzing and sorting your plugin load order. Supports Morrowind, OpenMW and Cyberpunk"
documentation = ""

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.5"

[package]
name = "plox"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
openmw-cfg = "0.5"                                              # move to feature flag
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.7"
rust-ini = "0.21"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
seahash = "4.1"
filetime = "0.2"
semver = "1.0"
lenient_semver = "0.4"

byteorder = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
rand = "0.9"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
