
[package]
name = "plox"
description = "PLOX - Plugin Load Order eXpert. PLOX is a tool for analyzing and sorting your plugin load order. Supports Morrowind and Cyberpunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plox_lib = { path = "../lib" }

log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }


# standard crate data is left out
[dev-dependencies]
pretty_assertions = "1.3"
rand = "0.8"
