[package]
name = "plox_gui"
edition = "2021"

version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
plox = { path = "../" }

egui = "0.26.0"
eframe = { version = "0.26.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

log = { workspace = true }
serde = { workspace = true }
simplelog = "0.12"
toml = "0.8"

# native:
pollster = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
