[package]
name = "plox_gui"
edition = "2021"

version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
plox = { path = "../" }

egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

log = { workspace = true }
serde = { workspace = true }
byteorder = { workspace = true }

open = "5.0"
simplelog = "0.12"
toml = "0.8"

# native:
pollster = "0.4"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
