
[package]
name = "plox_lib"
description = ""
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toposort-scc = { workspace = true }
byteorder = { workspace = true }
rust-ini = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
regex = { workspace = true }
openmw-cfg = { workspace = true }   # move to feature flag


# standard crate data is left out
[dev-dependencies]
pretty_assertions = "1.3"
rand = "0.8"
